--- a/package.json
+++ b/package.json
@@ -1,21 +1,37 @@
 {
-  "name": "expressjs",
+  "name": "express-api-typeorm",
   "version": "1.0.0",
-  "description": "",
+  "description": "APi con typeorm estandar con ejemplo comentado.",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc",
+    "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "api",
+    "typeorm",
+    "express",
+    "node",
+    "js"
+  ],
+  "author": "don moix",
   "license": "ISC",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.4"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.3",
-    "mysql2": "^3.9.4",
-    "nodemon": "^3.1.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.4.5"
+    "express": "^4.19.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.11.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   }
 }
